disaster-recovery/web/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: web-stack:apps/Deployment:web/nginx-web
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"web-stack:apps/Deployment:web/nginx-web"},"name":"nginx-web","namespace":"web"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"nginx-web"}},"template":{"metadata":{"labels":{"app":"nginx-web"}},"spec":{"containers":[{"image":"nginx:alpine","name":"nginx","ports":[{"containerPort":80}]}]}}}}
    name: nginx-web
    namespace: web
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: nginx-web
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: nginx-web
      spec:
        containers:
        - image: nginx:alpine
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    - lastTransitionTime: "2026-02-26T16:06:11Z"
      lastUpdateTime: "2026-02-26T16:06:11Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      type: Available
    - lastTransitionTime: "2026-02-26T16:06:08Z"
      lastUpdateTime: "2026-02-26T16:06:11Z"
      message: ReplicaSet "nginx-web-54ff8bfcc5" has successfully progressed.
      reason: NewReplicaSetAvailable
      type: Progressing
    replicas: 1
kind: List
metadata:
