disaster-recovery/web/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-nginx-ingress-access","namespace":"web"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"ingress-nginx"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}

        '
    name: allow-nginx-ingress-access
    namespace: web
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata: {}
